// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses empty program 1`] = `
Object {
  "body": Array [],
  "type": "Program",
}
`;

exports[`parses function call 1`] = `
Object {
  "body": Array [
    Object {
      "params": Array [
        Object {
          "type": "NumberLiteral",
          "value": "1",
        },
        Object {
          "type": "NumberLiteral",
          "value": "2",
        },
      ],
      "proc": Object {
        "type": "SymbolLiteral",
        "value": "add",
      },
      "type": "CallExpression",
    },
  ],
  "type": "Program",
}
`;

exports[`parses nested function call 1`] = `
Object {
  "body": Array [
    Object {
      "params": Array [
        Object {
          "type": "NumberLiteral",
          "value": "1",
        },
        Object {
          "params": Array [
            Object {
              "type": "NumberLiteral",
              "value": "2",
            },
            Object {
              "type": "NumberLiteral",
              "value": "3",
            },
          ],
          "proc": Object {
            "type": "SymbolLiteral",
            "value": "sub",
          },
          "type": "CallExpression",
        },
      ],
      "proc": Object {
        "type": "SymbolLiteral",
        "value": "add",
      },
      "type": "CallExpression",
    },
  ],
  "type": "Program",
}
`;
